# opengl-learn

./: .clang-format  .gitignore  LICENSE.md  Makefile  meson.build
assets/: icon.raw
inc/: camera.hpp  common.hpp  plane.hpp  shader.hpp
inc/object/: frame_sphere.hpp  object.hpp  plane.hpp  sphere.hpp
src/: camera.cpp  main.cpp  plane.cpp  shader.cpp
src/object/: frame_sphere.cpp  object.cpp  plane.cpp  sphere.cpp
